[metadata]
name = obsessian
version = 0.1
description = Watches an Obsidian vault and does action as it changes
url = https://github.com/hamelin/obsessian
author = Benoit Hamelin
author_email = benoit@benoithamelin.com
 
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Interpreters

[options]
packages = find:
python_requires = >=3.11
install_requires =
    watchdog

[options.packages.find]
exclude = test
