[metadata]
name = markdown_run
version = 0.1
description = Run Python code snippets out of a Markdown document, and insert output back
url = https://github.com/hamelin/markdown-run
author = Benoit Hamelin
author_email = benoit@benoithamelin.com
 
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Interpreters

[options]
packages = find:
python_requires = >=3.11
install_requires =
    mistletoe

[options.packages.find]
exclude = test
